<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_connections_filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/connections_filter"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_filter_active"
                    android:checked="true"
                    android:title="@string/connection_status_active" />
                <item
                    android:id="@+id/action_filter_closed"
                    android:title="@string/connection_status_closed" />
                <item
                    android:id="@+id/action_filter_all"
                    android:title="@string/connections_filter_all" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_connections_sort"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/connections_sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_close_all_connections"
        android:title="@string/connections_close_all"
        app:showAsAction="never" />
</menu>
